# agent-observability-hub

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: orchestrator.py
app/agents/: analyst.py  collector.py  llm_client.py  writer.py
app/api/: main.py
app/data/: seed.py
app/guardrails/: content_validator.py  llm_parser.py  rate_limiter.py
app/observability/: tracker.py
app/schemas/: models.py
docs/testing/: agent-observability-hub.tdd.md
evals/: harness.py
tests/: conftest.py  test_agents.py  test_api.py  test_evals.py  test_guardrails.py  test_observability.py  test_orchestrator.py  test_schemas.py
