[project]
name = "agent-observability-hub"
version = "0.1.0"
description = "Multi-agent pipeline for truck fleet cost analysis with guardrails, observability and evals"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["app", "evals"]
omit = ["*/__init__.py"]

[tool.coverage.report]
show_missing = true
